# atvc_site

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js
apps/chat/: admin.py  apps.py  constants.py  consumers.py  models.py  routing.py  urls.py  views.py
apps/cities/: admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/core/: admin.py  apps.py  context_processors.py  email_tasks.py  forms.py  models.py  signals.py  sitemaps.py  tasks.py  urls.py  views.py
apps/equipments/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
apps/news/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
apps/orders/: admin.py  apps.py  cart.py  forms.py  middleware.py  models.py  tasks.py  urls.py  views.py  views_cart.py
apps/services/: __init__.py  apps.py  email.py  utils.py
apps/support/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
assets/css/: styles.css
assets/js/: cart.js  cart2.js  channels_filter.js  cookie_consent.js  navbar.js  offices.js  order_modal.js  swiper_init.js
config/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  robots.txt
templates/chat/: index.html  support_dashboard.html  support_login.html
templates/cities/: index.html
templates/core/: about.html  address_check_form.html  available_services.html  b2b_internet.html  callback_form.html  callback_success.html  cart.html  checkout.html  company_detail.html  contact.html  feedback_notification.html  form_main_block.html  index copy 2.html  index copy 3.html  index copy 4.html  index copy.html  index.html  items.html  offices.html  order_success.html  services.html  static_page.html  tarif.html  tariff_list.html
templates/emails/: new_order_notification.html  new_order_notification.txt
templates/equipments/: equipment_list.html  product_detail.html
templates/includes/: feedback_form.html  feedback_thanks.html
templates/news/: news_detail.html  news_list.html
templates/orders/: cart.html  checkout.html  equipment_order.html  order_create.html
templates/partials/: _footer copy.html  _footer.html  _navbar copy.html  _navbar.html  page_header.html
templates/support/: article_detail.html  category_detail.html  faq_list.html  faq_service.html  home.html  popular_articles.html  search_results.html  service_help.html  topic_detail.html
(+104 files in other folders)
