[project]
name = "atvc-site"
version = "0.1.0"
description = "ATVC site"
authors = [
    {name = "olegshiryaev", email = "oashiryaev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "billiard (>=4.2.1,<5.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "click-didyoumean (>=0.3.1,<0.4.0)",
    "click-plugins (>=1.1.1,<2.0.0)",
    "click-repl (>=0.3.0,<0.4.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cron-descriptor (>=1.4.5,<2.0.0)",
    "diff-match-patch (>=20241021,<20241022)",
    "django-appconf (>=1.1.0,<2.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-ckeditor (>=6.7.3,<7.0.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-htmx (>=1.23.0,<2.0.0)",
    "django-imagekit (>=5.0.0,<6.0.0)",
    "django-import-export (>=4.3.7,<5.0.0)",
    "django-js-asset (>=3.1.2,<4.0.0)",
    "django-timezone-field (>=7.1,<8.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "et-xmlfile (>=2.0.0,<3.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "humanize (>=4.12.3,<5.0.0)",
    "idna (>=3.10,<4.0)",
    "kombu (>=5.5.4,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pilkit (>=3.0,<4.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "prompt-toolkit (>=3.0.51,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-crontab (>=3.2.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytils (>=0.4.3,<0.5.0)",
    "pytz (>=2025.2,<2026.0)",
    "redis (>=6.2.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "tablib (>=3.8.0,<4.0.0)",
    "tornado (>=6.5.1,<7.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "vine (>=5.1.0,<6.0.0)",
    "wcwidth (>=0.2.13,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
